force-app/main/default/objects/Re_Enrollment__c/Re_Enrollment__c.object-meta.xml
<CustomObject>
    <label>Re-Enrollment</label>
    <nameField>
        <label>Re-Enrollment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Re-Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>