force-app/main/default/objects/Re_Enrollment__c/fields/Date_BHI_Enrolled_In_Thoroughcare__c.field-meta.xml
<CustomField>
    <fullName>Date_BHI_Enrolled_In_Thoroughcare__c</fullName>
    <label>Date BHI Enrolled In Thoroughcare</label>
    <type>Date</type>
</CustomField>