force-app/main/default/objects/Re_Enrollment__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Re-Enrollments</relationshipLabel>
    <relationshipName>Re_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>